experiments/custom/de-de-slurm-5737.out
Traceback (most recent call last):
  File "/vol/bitbucket/al4616/miniconda3/envs/simnmt/bin/nmtpy", line 7, in <module>
    exec(compile(f.read(), __file__, 'exec'))
  File "/vol/bitbucket/al4616/simmt/bin/nmtpy", line 109, in <module>
    from nmtpytorch import models
  File "/vol/bitbucket/al4616/simmt/nmtpytorch/models/__init__.py", line 1, in <module>
    from .snmt import SimultaneousNMT
  File "/vol/bitbucket/al4616/simmt/nmtpytorch/models/snmt.py", line 260
    if !self.training:
       ^
SyntaxError: invalid syntax
Fri May  8 12:48:11 2020       
+-----------------------------------------------------------------------------+
| NVIDIA-SMI 435.21       Driver Version: 435.21       CUDA Version: 10.1     |
|-------------------------------+----------------------+----------------------+
| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |
| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |
|===============================+======================+======================|
|   0  TITAN Xp            On   | 00000000:B4:00.0 Off |                  N/A |
| 23%   25C    P8     9W / 250W |      0MiB / 12196MiB |      0%      Default |
+-------------------------------+----------------------+----------------------+
                                                                               
+-----------------------------------------------------------------------------+
| Processes:                                                       GPU Memory |
|  GPU       PID   Type   Process name                             Usage      |
|=============================================================================|
|  No running processes found                                                 |
+-----------------------------------------------------------------------------+
 12:48:11 up 126 days, 22:02,  4 users,  load average: 13.24, 12.12, 11.53
